--- a/css/style.css
+++ b/css/style.css
@@ -116,28 +116,26 @@
 .panel-produk img {
 	width: 30px;
 	height: 30px;
-	/* transition: box-shadow 0.5s; */
-	/* box-shadow: 5px 0px 40px rgba(0, 0, 0, 0.2); */
-	/* border: 1px solid transparent; */
 	margin-bottom: 15px;
 }
+
 div.gallery {
 	margin: 5px;
 	border: 1px solid #ccc;
 	float: left;
 	width: 180px;
 }
-  
+
 div.gallery:hover {
 	border: 1px solid #777;
 }
-  
+
 div.gallery img {
 	margin-top: 10px;
 	width: 160px;
 	height: auto;
 }
-  
+
 div.desc {
 	padding: 10px;
 	text-align: center;
@@ -174,6 +172,9 @@ div.harga {
 	color: #000;
 }
 
+.panel-review h2 {
+	font-family: Quattrocento Sans;
+}
 
 
 /*--------------- |Panel Pelayanan| ---------------*/
@@ -229,92 +230,6 @@ div.harga {
 	top: 0;
 	left: 0;
 	background-color: rgba(30, 30, 30, 0.85);
-}
-
-
-/*--------------- |Contact| ---------------*/
-.panel-contact {
-	height: 900px;
-	margin-top: 250px;
-	font-family: Quattrocento Sans;
-	font-weight: 300;
-	background-image: url('../image/SWITCH.jpg');
-	background-size: cover;
-	background-attachment: fixed;
-}
-
-.panel-contact .k2 {
-	margin-top: 60px;
-}
-
-.panel-contact h4 {
-	margin-top: 60px;
-	font-size: 25px;
-	color: #F2C94C;
-}
-
-.panel-contact p {
-	margin-bottom: 50px;
-	font-size: 20px;
-	color: #fff;
-}
-
-.panel-contact img {
-	width: 25px;
-	height: 25px;
-	margin-right: 20px;
-	margin-bottom: 15px;
-}
-
-.panel-contact span {
-	font-size: 15px;
-	color: #fff;
-}
-
-.panel-contact form-control {
-	border-radius: 0px;
-	border-color: #007849;
-	border-width: 2px;
-}
-
-.panel-contact .k1 {
-	margin-bottom: 10px;
-}
-
-
-/*--------------- |review| ---------------*/
-.panel-review {
-	text-align: center;
-	height: 950px;
-	margin-top: 100px;
-	font-family: Quattrocento Sans;
-}
-
-.panel-review h2 {
-	margin-bottom: 50px;
-	font-size: 25px;
-	color: #262228;
-}
-
-.panel-review img {
-	width: 115px;
-	height: 115px;
-	transition: box-shadow 0.5s;
-	box-shadow: 5px 0px 40px rgba(0, 0, 0, 0.2);
-	border: 1px solid transparent;
-	margin-bottom: 25px;
-}
-
-.panel-review h4 {
-	font-size: 20px;
-	margin-bottom: 25px;
-	color: #007849;
-}
-
-.panel-review p {
-	font-size: 15px;
-	color: #262228;
-	font-weight: 1000;
 }
 
 
@@ -408,68 +323,6 @@ div.harga {
 		margin-bottom: 50px;
 	}
 
-
-	/*--------------- |Panel Produk| ---------------*/
-	.panel-produk {
-		margin-top: 100px;
-		height: 550px;
-
-	}
-
-	.panel-produk h2 {
-		margin-bottom: 50px;
-		font-size: 35px;
-	}
-
-	.panel-produk img {
-		width: 75px;
-		height: 75px;
-		margin-bottom: 25px;
-	}
-
-	.panel-produk h4 {
-		font-size: 30px;
-		margin-bottom: 25px;
-	}
-
-	.panel-produk p {
-		font-size: 20px;
-		font-weight: 1000;
-	}
-	div.gallery {
-		margin: 5px;
-		border: 1px solid #ccc;
-		float: left;
-		width: 180px;
-	}
-	  
-	div.gallery:hover {
-		border: 1px solid #777;
-	}
-	  
-	div.gallery img {
-		margin-top: 10px;
-		width: 160px;
-		height: auto;
-	}
-	  
-	div.desc {
-		padding: 10px;
-		text-align: center;
-	}
-	
-	div.harga {
-		padding: 5px;
-		text-align: center;
-		margin-bottom: 10px;
-		font-weight: bold;
-	}
-
-
-	/*--------------- |Carousel| ---------------*/
-
-
-
 	/*--------------- |Panel Pelayanan| ---------------*/
 	.panel-pelayanan {
 		height: 850px;
@@ -502,71 +355,156 @@ div.harga {
 		left: 0;
 	}
 
-
-	/*--------------- |Contact| ---------------*/
-	.panel-contact {
-		height: 500px;
-		margin-top: 150px;
-		font-weight: 300;
+	/*--------------- |Panel Produk| ---------------*/
+	.panel-produk {
+		margin-top: 130px;
+		height: 550px;
 	}
 
-	.panel-contact h4 {
-		font-size: 25px;
-		margin-bottom: 20px;
-	}
-
-	.panel-contact p {
-		margin-bottom: 50px;
-		font-size: 20px;
-	}
-
-	.panel-contact i {
-		font-size: 20px;
-		margin-right: 20px;
-		margin-bottom: 15px;
-	}
-
-	.panel-contact span {
-		font-size: 15px;
-	}
-
-	.panel-contact input {
-		border-radius: 0px;
-		border-width: 2px;
-	}
-
-	.panel-contact textarea {
-		border-radius: 0px;
-		border-width: 2px;
-	}
-
-
-	/*--------------- |review| ---------------*/
-	.panel-review {
-		height: 450px;
-		margin-top: 100px;
-	}
-
-	.panel-review h2 {
+	.panel-produk h2 {
 		margin-bottom: 50px;
 		font-size: 35px;
 	}
 
-	.panel-review img {
-		width: 125px;
-		height: 125px;
+	.panel-produk img {
+		width: 75px;
+		height: 75px;
 		margin-bottom: 25px;
 	}
 
-	.panel-review h4 {
+	.panel-produk h4 {
 		font-size: 30px;
 		margin-bottom: 25px;
 	}
 
-	.panel-review p {
+	.panel-produk p {
 		font-size: 20px;
 		font-weight: 1000;
 	}
+
+	div.gallery {
+		margin: 5px;
+		border: 1px solid #ccc;
+		float: left;
+		width: 180px;
+	}
+
+	div.gallery:hover {
+		border: 1px solid #777;
+	}
+
+	div.gallery img {
+		margin-top: 10px;
+		width: 160px;
+		height: auto;
+	}
+
+	div.desc {
+		padding: 10px;
+		text-align: center;
+	}
+
+	div.harga {
+		padding: 5px;
+		text-align: center;
+		margin-bottom: 10px;
+		font-weight: bold;
+	}
+
+
+	/* ---------------| Testimonial |---------------*/
+
+	.panel-review h2 {
+		margin-top: 130px;
+	}
+
+	.col-center {
+		margin: 0 auto;
+		float: none !important;
+	}
+
+	.carousel {
+		margin: 50px auto;
+		padding: 0 70px;
+	}
+
+	.carousel .item {
+		color: #999;
+		font-size: 14px;
+		text-align: center;
+		overflow: hidden;
+		min-height: 290px;
+	}
+
+	.carousel .item .img-box {
+		width: 135px;
+		height: 135px;
+		margin: 0 auto;
+		padding: 5px;
+		border: 1px solid #ddd;
+		border-radius: 50%;
+	}
+
+	.carousel .img-box img {
+		width: 100%;
+		height: 100%;
+		display: block;
+		border-radius: 50%;
+	}
+
+	.carousel .testimonial {
+		padding: 30px 0 10px;
+	}
+
+	.carousel .overview {
+		font-style: italic;
+	}
+
+	.carousel .overview b {
+		text-transform: uppercase;
+		color: #7AA641;
+	}
+
+	.carousel .carousel-control {
+		width: 40px;
+		height: 40px;
+		margin-top: -20px;
+		top: 50%;
+		background: none;
+	}
+
+	.carousel-control i {
+		font-size: 68px;
+		line-height: 42px;
+		position: absolute;
+		display: inline-block;
+		color: rgba(0, 0, 0, 0.8);
+		text-shadow: 0 3px 3px #e6e6e6, 0 0 0 #000;
+	}
+
+	.carousel .carousel-indicators {
+		bottom: -40px;
+	}
+
+	.carousel-indicators li,
+	.carousel-indicators li.active {
+		width: 10px;
+		height: 10px;
+		margin: 1px 3px;
+		border-radius: 50%;
+	}
+
+	.carousel-indicators li {
+		background: #999;
+		border-color: transparent;
+		box-shadow: inset 0 2px 1px rgba(0, 0, 0, 0.2);
+	}
+
+	.carousel-indicators li.active {
+		background: #555;
+		box-shadow: inset 0 2px 1px rgba(0, 0, 0, 0.2);
+	}
+
 
 
 	/*--------------- |Footer| ---------------*/
